force-app/main/default/objects/copado__Project__c/fields/InternalJira__c.field-meta.xml
<CustomField>
    <fullName>InternalJira__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use 7S Jira instance</description>
    <inlineHelpText>Use 7S Jira instance</inlineHelpText>
    <label>Use 7S Jira</label>
    <type>Checkbox</type>
</CustomField>