force-app/main/default/objects/copado__Project__c/fields/Opps_Staffing_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opps_Staffing_Stage__c</fullName>
    <description>Operations Staffing Stage</description>
    <inlineHelpText>Operations Staffing Stage</inlineHelpText>
    <label>Ops Staffing Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>