force-app/main/default/objects/copado__Project__c/fields/PSAProject__c.field-meta.xml
<CustomField>
    <fullName>PSAProject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associated project in PSA</description>
    <inlineHelpText>Associated project in PSA</inlineHelpText>
    <label>PSA Project</label>
    <referenceTo>pse__Proj__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>CopadoProjects</relationshipName>
    <type>Lookup</type>
</CustomField>