force-app/main/default/objects/copado__Project__c/fields/Schedule_End__c.field-meta.xml
<CustomField>
    <fullName>Schedule_End__c</fullName>
    <defaultValue>&apos;17&apos;</defaultValue>
    <description>Hour of the day that the scheduled job ends</description>
    <inlineHelpText>Hour of the day that the scheduled job ends</inlineHelpText>
    <label>Schedule End</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Schedule_Hours</valueSetName>
    </valueSet>
</CustomField>