force-app/main/default/objects/copado__Project__c/fields/Schedule_Start__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Start__c</fullName>
    <defaultValue>&apos;08&apos;</defaultValue>
    <description>Hour of the day that the scheduled job starts</description>
    <inlineHelpText>Hour of the day that the scheduled job starts</inlineHelpText>
    <label>Schedule Start</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Schedule_Hours</valueSetName>
    </valueSet>
</CustomField>